--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "react": "^0.14.7",
-    "react-dom": "^0.14.7"
+    "react-dom": "^0.14.7",
+    "react-router": "^2.6.1"
   },
   "devDependencies": {
     "webpack": "^1.12.14"
