--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "application-name",
   "version": "0.0.1",
   "scripts": {
+    "start": "node server.js",
     "build": "webpack --config webpack.config.js",
-    "dev": "webpack --watch --config webpack.config.js",
+    "webpack:watch": "webpack --watch",
+    "dev": "concurrently --kill-others \"npm run webpack:watch\" \"npm start\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
@@ -11,11 +13,13 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "express": "^4.14.0",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-router": "^2.6.1"
   },
   "devDependencies": {
+    "concurrently": "^3.1.0",
     "webpack": "^1.12.14"
   }
 }
